@@ -369,7 +369,6 @@ module Merger FinalTrackMerger {
 module TreeWriter TreeWriter {
 # add Branch InputArray BranchName BranchClass
   add Branch TagSkimmer/particles Particle GenParticle
-  add Branch Delphes/allParticles GenParticle GenParticle
 
   add Branch TrackMerger/tracks Track Track
   add Branch EFlowMerger/eflow Tower Tower
